eclipse-workspace/.metadata/.plugins/org.eclipse.cdt.ui/UTNFunctions.build.log
16:57:36 **** Incremental Build of configuration Debug for project UTNFunctions ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\utn.o" "..\\src\\utn.c" 
..\src\utn.c: In function 'utn_getNumero':
..\src\utn.c:41:12: error: invalid storage class for function 'getInt'
   41 | static int getInt(int* pResultado){
      |            ^~~~~~
..\src\utn.c:53:12: error: invalid storage class for function 'esNumerica'
   53 | static int esNumerica(char* cadena)
      |            ^~~~~~~~~~
..\src\utn.c:69:1: error: expected declaration or statement at end of input
   69 | }
      | ^
..\src\utn.c: At top level:
..\src\utn.c:11:12: warning: 'getInt' used but never defined
   11 | static int getInt(int* pResultado);
      |            ^~~~~~
..\src\utn.c:12:12: warning: 'esNumerica' used but never defined
   12 | static int esNumerica(char* cadena);
      |            ^~~~~~~~~~
..\src\utn.c: In function 'utn_getNumero':
..\src\utn.c:69:1: warning: control reaches end of non-void function [-Wreturn-type]
   69 | }
      | ^
At top level:
..\src\utn.c:53:12: warning: 'esNumerica' defined but not used [-Wunused-function]
   53 | static int esNumerica(char* cadena)
      |            ^~~~~~~~~~
..\src\utn.c:41:12: warning: 'getInt' defined but not used [-Wunused-function]
   41 | static int getInt(int* pResultado){
      |            ^~~~~~

16:57:42 Build Failed. 3 errors, 5 warnings. (took 6s.321ms)

